# AutonomousCar

./: .gitignore  CMakeLists.txt  result1.avi
include/: common.h
include/carcontrol/: carcontrol.h
include/drivecomands/: VectorAngle.hpp
include/gps/: gpsconnection.h
include/image/: image.h
include/imagemapping/: imagecoord.h  imageprimitive.h  maprepresentation.h
include/imuencoderposition/: imuencoderposition.h
include/map/: edge.h  edgeset.h  map.h  node.h  nodeset.h  path.h  pathtracking.h  vec2.h
include/observer/: observer.h
include/obstacledetection/: ObstacleDetection.h
include/positiondrive/: positiondrive.h
include/serialhandler/: messageconverter.h  serialhandler.h
include/socket/: socket.h
include/statemachine/: statemachine.h
include/timer/: timer.h
include/trafficsign/: TrafficSignRecognition.h
lib/imu/: RTIMULib.ini
resources/: Map.json  svmAutoTrained
scripts/: Makefile
src/: cnnTest.cpp  cnnTest2.cpp  main.cpp  mainState.cpp  mapreprTest.cpp  moveTest.cpp  moveTest2.cpp  nodesTest.cpp  pathDrriveTest.hpp  timerTest.cpp  trafficSignTest.cpp
src/carcontrol/: carcontrol.cpp
src/gps/: gpsconnection.cpp  gpsdata.cpp
src/image/: image.cpp
src/imagemapping/: imagecoord.cpp  maprepresentation.cpp
src/imu/: imu.cpp
src/imuencoderposition/: imuencoderposition.cpp
src/lanedetection/neuralnetwork/: caffenetwork.cpp  movidiusnetwork.cpp
src/map/: edge.cpp  edgeset.cpp  map.cpp  node.cpp  nodeset.cpp  path.cpp  pathtracking.cpp  vec2.cpp
src/obstacledetection/: ObstacleDetection.cpp
src/positiondrive/: positiondrive.cpp
src/serialhandler/: filehandler.cpp  messageconverter.cpp  serialhandler.cpp
src/socket/: socket.cpp
src/statemachine/: statemachine.cpp
src/trafficsign/: TrafficSignRecognition.cpp
